--- a/DayFourAssignmentFour/.classpath
+++ b/DayFourAssignmentFour/.classpath
@@ -7,11 +7,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/markm/Downloads/hamcrest-core-1.3.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/markm/Downloads/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/markm/Downloads/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
