--- a/utopia/Utopia/.classpath
+++ b/utopia/Utopia/.classpath
@@ -7,5 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="mysql-connector-java-8.0.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/markm/Downloads/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/markm/Downloads/junit-4.13.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
